# connect

./: .editorconfig  Cargo.toml  LICENSE  README.md  angular.json  clippy.toml  dev.sh  devenv.nix  package.json  update-version.sh
.github/: release.yaml
.github/workflows/: build.yaml  upload-agnostic-assets.yml  version-check.yml
examples/: basic_websocket.html
src/: adapter.rs  app_state.rs  clients.rs  controller.rs  index.html  main.rs  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapter.rs  app_state.rs  app_status.rs  bluetooth.rs  bluetooth_error.rs  bluetooth_state.rs  clients.rs  connected_device.rs  controller.rs  device_id.rs  disconnections.rs  events.rs  main.rs  main_controller.rs  server.rs  ui.rs  version.rs
src-tauri/src/bluetooth/: characteristic_value.rs  connected_device.rs  device_data.rs  discovery.rs  error.rs  notifications.rs  state.rs  timestamp.rs
src-tauri/src/bluetooth/device_data/: characteristic.rs  service.rs
src-tauri/src/bluetooth/discovery/: discovered_device.rs  discovery_actor.rs  discovery_message.rs  discovery_stream.rs
src-tauri/src/bluetooth/notifications/: notification_stream.rs  notifications_message.rs
src-tauri/src/broadcaster/: broadcast_command.rs  broadcaster.rs
src-tauri/src/discovery/: discovery.rs  mod.rs
src-tauri/src/notifications/: notifications.rs
src-tauri/src/old/: app_state.rs  bluetooth.rs  bluetooth_state.rs  client.rs  clients.rs  controller.rs  disconnections.rs  events.rs  local_discovery.rs  web_socket_client.rs
src-tauri/src/old/broadcaster/: broadcast_command.rs
src-tauri/src/old/discovery/: discovery.rs
src-tauri/src/old/notifications/: notifications.rs
src-tauri/src/server/: connection.rs  message.rs  server.rs  server_connection.rs
src-tauri/src/server/connection/: connection_actor.rs
src-tauri/src/server/message/: broadcast.rs  request.rs  response.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  app.routing.module.ts  bluetooth-error.ts  status.service.ts
src/app/device-details/: device-data.ts  device-details.component.css  device-details.component.html  device-details.component.ts
src/app/discovery/: discovered-device.ts  discovered_device.ts  discovery.component.css  discovery.component.html  discovery.component.spec.ts  discovery.component.ts
src/app/help/: help.component.css  help.component.html  help.component.ts
src/app/main/: main.component.css  main.component.html  main.component.scss  main.component.ts
src/broadcaster/: mod.rs
src/discovery/: discovery.rs  discovery_command.rs
src/server/: mod.rs  server.rs  server_connection.rs
src/server/message/: broadcast.rs  mod.rs  request.rs  response.rs
