[package]
name = "cubeast-connect"
version = "0.3.2"
description = "Cubeast Bluetooth proxy"
authors = ["Cubeast"]
license = "MIT"
repository = "https://github.com/cubeast-app/connect"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["clipboard-write-text", "icon-png", "shell-open", "system-tray", "updater", "window-all"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
btleplug = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lets_expect = "0.5.1"
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
http = "0.2.8"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
# thiserror = "1.0"
# anyhow = "1.0"
# dyn-clone = "1.0.11"


[dev-dependencies]
lets_expect = "0.5"
mockall = "0.11.4"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
