[package]
name = "cubeast-connect"
version = "0.7.0"
description = "Cubeast Bluetooth proxy"
authors = ["Cubeast"]
license = "MIT"
repository = "https://github.com/cubeast-app/connect"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-clipboard-manager = "2"

btleplug = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
http = "0.2.8"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = "0.4.41"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

[dev-dependencies]
lets_expect = "0.5"
mockall = "0.11.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
